examples/test/testpolicy18455.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18455
  namespace: namespace178
spec:
  podSelector:
    matchLabels:
      key28: value18
      key38: value44
      key45: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value35
          key21: value39
          key9: value43
